<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkyellow">



    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <View
        android:id="@+id/divider0"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="?android:attr/listDivider" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/enquire_content"
        android:hint="@string/enquireContent"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enquireType"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <Spinner
        android:id="@+id/spinner_enquire_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="140dp" />
    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="?android:attr/listDivider" />

    <Button android:id="@+id/postEnquire"
        android:text="@string/postEnquire"
        android:layout_width="234dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/profilebutton1"
        android:contentDescription="@string/sidebarButtonDescription"
        android:textAllCaps="false"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="19sp"
        android:textStyle="bold"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>