<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.MainScreen">
    <!--tools:openDrawer="start"-->
    <!--android:background="@color/"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/darkyellow">
        <RelativeLayout
            android:id="@+id/first"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp" >

            <RelativeLayout
                android:id="@+id/username_container"
                android:layout_width="350dp"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="0dp"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/email_container"
                android:layout_width="350dp"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:layout_weight="25">


                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="0dp"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            </RelativeLayout>
        </RelativeLayout>


        <!--<android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:id="@+id/recycler_view">

        </android.support.v7.widget.RecyclerView>-->

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/this_app"
                android:layout_width="125dp"
                android:layout_height="39dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/profilebutton1"
                android:contentDescription="@string/sidebarButtonDescription"
                android:text="@string/app"
                android:textAllCaps="false"
                android:textColor="@color/browser_actions_bg_grey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="79dp"
                android:layout_alignBottom="@+id/about"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginStart="135dp"
                android:layout_marginLeft="135dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="134dp"
                android:layout_marginRight="134dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/applogo"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/database"
                android:layout_width="125dp"
                android:layout_height="39dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="185dp"
                android:layout_marginLeft="185dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/profilebutton1"
                android:contentDescription="@string/sidebarButtonDescription"
                android:text="@string/database"
                android:textAllCaps="false"
                android:textColor="@color/browser_actions_bg_grey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/about"
                android:layout_width="125dp"
                android:layout_height="39dp"
                android:layout_below="@+id/this_app"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/profilebutton1"
                android:contentDescription="@string/sidebarButtonDescription"
                android:text="@string/about"
                android:textAllCaps="false"
                android:textColor="@color/browser_actions_bg_grey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/settings"
                android:layout_width="125dp"
                android:layout_height="39dp"
                android:layout_below="@+id/database"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="185dp"
                android:layout_marginLeft="185dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:background="@drawable/profilebutton1"
                android:contentDescription="@string/sidebarButtonDescription"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="@color/browser_actions_bg_grey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sign_out"
                android:layout_width="130dp"
                android:layout_height="39dp"
                android:layout_below="@+id/logo"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="115dp"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="115dp"
                android:layout_marginRight="115dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/profilebutton1"
                android:contentDescription="@string/sidebarButtonDescription"
                android:text="@string/signout"
                android:textAllCaps="false"
                android:textColor="@color/browser_actions_bg_grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">

            <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp" />
        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id = "@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/yellow">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:orientation="vertical">

                <Button
                    android:id="@+id/home"
                    android:layout_width="40dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/home"
                    app:layout_constraintBottom_toTopOf="@+id/profile"
                    app:layout_constraintEnd_toEndOf="@+id/profile"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/profile"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />


                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="226dp"
                    android:layout_height="80dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/profileButton"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/profilebutton1"
                    android:onClick="onClick"
                    android:text="@string/profile"
                    android:textAllCaps="false"
                    android:textColor="@color/browser_actions_bg_grey"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/profile"
                    app:layout_constraintStart_toStartOf="@+id/profile"
                    app:layout_constraintTop_toBottomOf="@+id/profile"
                    app:layout_constraintVertical_bias="0.009" />

                <Button
                    android:id="@+id/foodButton"
                    android:layout_width="210dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/food_module"
                    android:paddingStart="42dp"
                    android:paddingLeft="42dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/food"
                    android:textAllCaps="false"
                    android:textColor="@color/browser_actions_bg_grey"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/profileButton"
                    app:layout_constraintStart_toStartOf="@+id/profileButton"
                    app:layout_constraintTop_toBottomOf="@+id/profileButton" />

                <Button
                    android:id="@+id/stayButton"
                    android:layout_width="210dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/stay_module"
                    android:paddingLeft="42dp"
                    android:text="@string/stay"
                    android:textAllCaps="false"
                    android:textColor="@color/browser_actions_bg_grey"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/foodButton"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/foodButton"
                    app:layout_constraintTop_toBottomOf="@+id/foodButton"
                    app:layout_constraintVertical_bias="0.034" />

                <Button
                    android:id="@+id/eventsButton"
                    android:layout_width="210dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/events_module"
                    android:paddingLeft="43dp"
                    android:text="@string/events"
                    android:textAllCaps="false"
                    android:textColor="@color/browser_actions_bg_grey"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/stayButton"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/stayButton"
                    app:layout_constraintTop_toBottomOf="@+id/stayButton"
                    app:layout_constraintVertical_bias="0.05" />

                <Button
                    android:id="@+id/facilitiesButton"
                    android:layout_width="210dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/facilities_module"
                    android:paddingStart="50sp"
                    android:paddingLeft="50sp"
                    android:paddingEnd="0sp"
                    android:paddingRight="0sp"
                    android:text="@string/facilities"
                    android:textAllCaps="false"
                    android:textColor="@color/browser_actions_bg_grey"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/eventsButton"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/eventsButton"
                    app:layout_constraintTop_toBottomOf="@+id/eventsButton"
                    app:layout_constraintVertical_bias="0.108" />

                <Button
                    android:id="@+id/creditsButton"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/profilebutton1"
                    android:text="@string/credits"
                    android:textAllCaps="false"
                    android:textColor="@color/browser_actions_bg_grey"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/facilitiesButton"
                    app:layout_constraintStart_toStartOf="@+id/facilitiesButton"
                    app:layout_constraintTop_toBottomOf="@+id/facilitiesButton"
                    app:layout_constraintVertical_bias="0.44" />


            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>